--- a/gy_en.html
+++ b/gy_en.html
@@ -152,7 +152,7 @@
         </aside>
         <aside id="middle">
           <p>
-            <font size="+2.5"><strong>&nbsp;Yu Gu &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://keithand2020.github.io/S2AC/gy_cn.html" style="font-size: 22px">
+            <font size="+2.5"><strong>&nbsp;Yu Gu &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://towarmth.github.io/HFUT-S2AC/gy_cn.html" style="font-size: 22px">
            Chinese
           </a></strong></font>
           </p>
