--- a/gy_cn.html
+++ b/gy_cn.html
@@ -218,14 +218,14 @@
           </p>
 
           <p style="line-height:50%">
-            <font size="3"><a href="http://ci.hfut.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;计算机与信息学院</a></font>
+            <font size="3"><a href="https://www.scse.uestc.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;计算机科学与工程学院</a></font>
           </p>
           <p style="line-height:90%">
-            <font size="3"><a href="http://www.hfut.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;合肥工业大学</a></font>
+            <font size="3"><a href="https://www.uestc.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;电子科技大学</a></font>
           </p>
           <p style="line-height:90%">
-            <font size="3"><strong>&nbsp;&nbsp;Email:</strong> <a href="mailto:Hfut_bruce@hfut.edu.cn">
-                Hfut_bruce@hfut.edu.cn</a></font>
+            <font size="3"><strong>&nbsp;&nbsp;Email:</strong> <a href="mailto:guyu@uestc.edu.cn">
+              guyu@uestc.edu.cn</a></font>
           </p>
           <!--  <p style="line-height:90%">
             <font size="3"><strong>&nbsp;&nbsp;Office:</strong> Room 401, Sixian Building, USTC, Suzhou, Jiangsu, China,
@@ -234,7 +234,7 @@
         </aside>
         <aside id="right">
           <p></p>
-          <img src="hf.jpg" width="180" height="180">
+          <img src="uestc.jpg" width="180" height="180">
         </aside>
       </div>
       <!-- 
