--- a/index.html
+++ b/index.html
@@ -221,17 +221,15 @@
                     </p>
 
                     <p style="line-height:90%">
-                        <font size="3"><a href="http://ci.hfut.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;School of
-                                Computer Science and Information Engineering </a></font>
+                        <font size="3"><a href="https://www.en.scse.uestc.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;School of
+                                Computer Science and Engineering </a></font>
                     </p>
                     <p style="line-height:90%">
-                        <font size="3"><a href="http://www.hfut.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;HeFei
-                                University
-                                of Technology </a></font>
+                        <font size="3"><a href="https://en.uestc.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;University of Electronic Science and Technology of China</a></font>
                     </p>
                     <p style="line-height:90%">
-                        <font size="3"><strong>&nbsp;&nbsp;Email:</strong> <a href="mailto:Hfut_bruce@hfut.edu.cn">
-                                Hfut_bruce@hfut.edu.cn</a></font>
+                        <font size="3"><strong>&nbsp;&nbsp;Email:</strong> <a href="mailto:guyu@uestc.edu.cn">
+                            guyu@uestc.edu.cn</a></font>
                     </p>
                     <!--  <p style="line-height:90%">
                 <font size="3"><strong>&nbsp;&nbsp;Office:</strong> Room 401, Sixian Building, USTC, Suzhou, Jiangsu, China,215028.
@@ -239,7 +237,7 @@
                 </aside>
                 <aside id="right">
                     <p></p>
-                    <img src="hf.jpg" width="180" height="180">
+                    <img src="uestc.jpg" width="180" height="180">
                 </aside>
             </div>
             <!--
