insert the news module-20230323

--- a/gy_cn.html
+++ b/gy_cn.html
@@ -308,6 +308,8 @@
       <div class="row">
         <div class="col-md-12">
           <ul>
+            <li> <b>2023.03.23</b> &nbsp; <b>S<sup>2</sup>AC</b>博士颜焕的论文“Attention-based gesture recognition using commodity WiFi devices”
+              被IEEE Sensors Journal录用！</li>
             <li> <b>2022.11.06</b> &nbsp; <b>S<sup>2</sup>AC</b>博士颜焕的论文“Towards Facial Expression Recognition in the
               Wild via Noise-tolerant Network”被IEEE TCSVT录用！</li>
             <li> <b>2022.03.09</b> &nbsp; <b>S<sup>2</sup>AC</b>博士王萌的论文“SpiroFi: Contactless Pulmonary Function
