--- a/index.html
+++ b/index.html
@@ -341,6 +341,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul>
+                            <li><b>2023.03.23</b> &nbsp; Our paper entitled "Attention-based gesture recognition 
+                                using commodity WiFi devices" has been accepted by <b>IEEE Sensors Journal</b>! Big cons to
+                                Mr.Yan Huan!
+                            </li>
                             <li><b>2022.11.06</b> &nbsp; Our paper entitled "Towards Facial Expression Recognition in
                                 the
                                 Wild via Noise-tolerant Network" has been accepted by <b>IEEE TCSVT</b>! Big cons to
