--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
                     <li class="scroll-link"><a
                             href="https://towarmth.github.io/HFUT-S2AC/gy_en.html#publications">Publications</a>
                     </li>
-                    <!-- <li class="scroll-link"><a href="https://keithand2020.github.io/S2AC/gy_en.html#experience">Experience</a></li> -->
                     <li class="scroll-link"><a href="https://towarmth.github.io/HFUT-S2AC/gy_en.html#awards">Awards</a>
                     </li>
                 </ul>
@@ -341,6 +340,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul>
+                            <li><b>2023.03.27</b> &nbsp; Our paper entitled "WiGRUNT: Wifi-enabled Gesture Recognition Using Dual-Attention Network" 
+                                has been the "Popular Documents" which includes the 50 most frequently accessed documents for this publication
+                                six times from July 2022 to Feburuary 2023 in <b>IEEE THMS</b>! Big cons to
+                                Mr.Zhang Xiang!
+                            </li>
                             <li><b>2023.03.23</b> &nbsp; Our paper entitled "Attention-based gesture recognition 
                                 using commodity WiFi devices" has been accepted by <b>IEEE Sensors Journal</b>! Big cons to
                                 Mr.Yan Huan!
