--- a/index.html
+++ b/index.html
@@ -220,15 +220,17 @@
                     </p>
 
                     <p style="line-height:90%">
-                        <font size="3"><a href="https://www.en.scse.uestc.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;School of
+                        <font size="3"><a href="https://www.en.scse.uestc.edu.cn/"
+                                style="color:#0000FF;">&nbsp;&nbsp;School of
                                 Computer Science and Engineering </a></font>
                     </p>
                     <p style="line-height:90%">
-                        <font size="3"><a href="https://en.uestc.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;University of Electronic Science and Technology of China</a></font>
+                        <font size="3"><a href="https://en.uestc.edu.cn/" style="color:#0000FF;">&nbsp;&nbsp;University
+                                of Electronic Science and Technology of China</a></font>
                     </p>
                     <p style="line-height:90%">
                         <font size="3"><strong>&nbsp;&nbsp;Email:</strong> <a href="mailto:guyu@uestc.edu.cn">
-                            guyu@uestc.edu.cn</a></font>
+                                guyu@uestc.edu.cn</a></font>
                     </p>
                     <!--  <p style="line-height:90%">
                 <font size="3"><strong>&nbsp;&nbsp;Office:</strong> Room 401, Sixian Building, USTC, Suzhou, Jiangsu, China,215028.
@@ -340,13 +342,16 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul>
-                            <li><b>2023.03.27</b> &nbsp; Our paper entitled "WiGRUNT: Wifi-enabled Gesture Recognition Using Dual-Attention Network" 
-                                has been the "Popular Documents" which includes the 50 most frequently accessed documents for this publication
+                            <li><b>2023.03.27</b> &nbsp; Our paper entitled "WiGRUNT: Wifi-enabled Gesture Recognition
+                                Using Dual-Attention Network"
+                                has been the "Popular Documents" which includes the 50 most frequently accessed
+                                documents for this publication
                                 six times from July 2022 to Feburuary 2023 in <b>IEEE THMS</b>! Big cons to
                                 Mr.Zhang Xiang!
                             </li>
-                            <li><b>2023.03.23</b> &nbsp; Our paper entitled "Attention-based gesture recognition 
-                                using commodity WiFi devices" has been accepted by <b>IEEE Sensors Journal</b>! Big cons to
+                            <li><b>2023.03.23</b> &nbsp; Our paper entitled "Attention-based gesture recognition
+                                using commodity WiFi devices" has been accepted by <b>IEEE Sensors Journal</b>! Big cons
+                                to
                                 Mr.Yan Huan!
                             </li>
                             <li><b>2022.11.06</b> &nbsp; Our paper entitled "Towards Facial Expression Recognition in
@@ -442,6 +447,23 @@
                 <h2>Publications (recently four years)</h2>
                 <div id="page">
                     <div id="content">
+                        <h3> 2023 </h3>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <span>
+                                    <font color="#FF0000"><strong>[IEEE Sensors Journal'23]</strong></font>
+                                    <b>Yu Gu</b>, Huan Yan, Xiang Zhang, Yantong Wang, Jinyang Huang, Yusheng Ji, Fuji
+                                    Ren,
+                                    "Attention-based gesture recognition using commodity WiFi devices,"
+                                    IEEE Sensors Journal, 2023.
+                                    (JCR Q1)
+                                </span>
+                            </div>
+                        </div>
+
+                        <br>
+                        <div style="border-top:1px gray dashed;" />
+
                         <h3> 2022 </h3>
                         <div class="row">
                             <div class="col-md-12">
@@ -453,7 +475,6 @@
                                     IEEE Transactions on Circuits and Systems for Video Technology, 2022, doi:
                                     10.1109/TCSVT.2022.3220669.
                                     (CCF B)
-                                    <!--                          [<a href="2022/Mitigating_Label-Noise_for_Facial_Expression_Recognition_in_the_Wild.pdf" style="color:#0000FF;">PDF</a>] <br> -->
                                 </span>
                             </div>
 
