Add news&publication about the paper 'Wital'

--- a/gy_cn.html
+++ b/gy_cn.html
@@ -309,6 +309,9 @@
       <div class="row">
         <div class="col-md-12">
           <ul>
+            <li> <b>2023.03.31</b> &nbsp; <b>S<sup>2</sup>AC</b>博士章翔的论文“Wital: A COTS WiFi Devices Based Vital Signs
+              Monitoring System Using NLOS Sensing Model”
+              被IEEE THMS录用！</li>
             <li> <b>2023.03.27</b> &nbsp; <b>S<sup>2</sup>AC</b>博士章翔的论文“WiGRUNT: WiFi-enabled Gesture Recognition Using
               Dual-attention Network”
               2022年7月-2023年2月间总计六次获评IEEE THMS的月度流行文章！</li>
@@ -368,6 +371,19 @@
 
           <h3> 2023 </h3>
           <div class="row">
+            <div class="col-md-12">
+              <span>
+                <font color="#FF0000"><strong>[THMS'23]</strong></font>
+                Xiang Zhang, <b>Yu Gu</b>, Huan Yan, Yantong Wang, Mianxiong Dong, Fuji Ren,Yusheng Ji,
+                "Wital: A COTS WiFi Devices Based Vital Signs Monitoring System Using NLOS Sensing Model,"
+                IEEE THMS, 2023.
+                (CCF B, JCR Q2)
+              </span>
+            </div>
+
+
+
+
             <div class="col-md-12">
               <span>
                 <font color="#FF0000"><strong>[IEEE Sensors Journal'23]</strong></font>
