Alter information of Lab

--- a/gy_cn.html
+++ b/gy_cn.html
@@ -211,10 +211,7 @@
           <p style="line-height:180%"> &nbsp;<font size="4"><strong>&nbsp;教授</strong></font>
           </p>
 
-          <p style="line-height:50%"> &nbsp; <img src="1.png" width="40" height="40">
-            <font size="3"><a href="http://s2ac.cn/home/index.html"
-                style="color:#0000FF;">&nbsp;&nbsp;智能感知与情感计算实验室，S<sup>2</sup>AC </a></font>
-
+          <p style="color:#0000FF;">&nbsp;&nbsp;I<sup>+</sup> Lab
           </p>
 
           <p style="line-height:50%">
