--- a/index.html
+++ b/index.html
@@ -214,9 +214,10 @@
                     <p style="line-height:180%"> &nbsp;<font size="4"><strong>&nbsp;Professor</strong></font>
                     </p>
 
-                    <p style="line-height:50%"><img src="1.png" width="40" height="40">
-                        <font size="3"><a href="http://s2ac.cn/home/index.html" style="color:#0000FF;">&nbsp;&nbsp;Smart
-                                Sensing & Affective Computing lab（S<sup>2</sup>AC） </a></font>
+                    <p style="line-height:50%">
+                        <font size="3">
+                            <p style="color:#0000FF;">&nbsp;&nbsp;I<sup>+</sup> Lab</p>
+                        </font>
                     </p>
 
                     <p style="line-height:90%">
