--- a/gy_cn.html
+++ b/gy_cn.html
@@ -182,12 +182,12 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="scroll-link"><a href="https://towarmth.github.io/HFUT-S2AC/gy_cn.html#top">Home</a></li>
-          <li class="scroll-link"><a href="https://towarmth.github.io/HFUT-S2AC/gy_cn.html#aboutme">Biography</a></li>
-          <li class="scroll-link"><a href="https://towarmth.github.io/HFUT-S2AC/gy_cn.html#updates">News</a></li>
+          <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#top">Home</a></li>
+          <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#aboutme">Biography</a></li>
+          <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#updates">News</a></li>
           <li class="scroll-link"><a
-              href="https://towarmth.github.io/HFUT-S2AC/gy_cn.html#publications">Publications</a></li>
-          <li class="scroll-link"><a href="https://towarmth.github.io/HFUT-S2AC/gy_cn.html#awards">Awards</a></li>
+              href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#publications">Publications</a></li>
+          <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#awards">Awards</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -204,7 +204,7 @@
         <aside id="middle">
           <p>
             <font size="+2.5"><strong>&nbsp;谷雨&nbsp;&nbsp;&nbsp;&nbsp;<a
-                  href="https://towarmth.github.io/HFUT-S2AC/gy_en.html" style="font-size: 22px">
+                  href="https://towarmth.github.io/UESTC_YuGu/gy_en.html" style="font-size: 22px">
                   英文版</a></strong></font>
           </p>
 
