--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="scroll-link"><a href="https://towarmth.github.io/HFUT-S2AC/gy_en.html#top">Home</a></li>
+                    <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_en.html#top">Home</a></li>
                     <li class="scroll-link"><a
-                            href="https://towarmth.github.io/HFUT-S2AC/gy_en.html#aboutme">Biography</a>
+                            href="https://towarmth.github.io/UESTC_YuGu/gy_en.html#aboutme">Biography</a>
                     </li>
-                    <li class="scroll-link"><a href="https://towarmth.github.io/HFUT-S2AC/gy_en.html#updates">News</a>
+                    <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_en.html#updates">News</a>
                     </li>
                     <li class="scroll-link"><a
-                            href="https://towarmth.github.io/HFUT-S2AC/gy_en.html#publications">Publications</a>
+                            href="https://towarmth.github.io/UESTC_YuGu/gy_en.html#publications">Publications</a>
                     </li>
-                    <li class="scroll-link"><a href="https://towarmth.github.io/HFUT-S2AC/gy_en.html#awards">Awards</a>
+                    <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_en.html#awards">Awards</a>
                     </li>
                 </ul>
             </div>
@@ -206,7 +206,7 @@
                 <aside id="middle">
                     <p>
                         <font size="+2.5"><strong>&nbsp;Yu Gu &nbsp;&nbsp;&nbsp;&nbsp; <a
-                                    href="https://towarmth.github.io/HFUT-S2AC/gy_cn.html" style="font-size: 22px">
+                                    href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html" style="font-size: 22px">
                                     Chinese
                                 </a></strong></font>
                     </p>
