--- a/gy_cn.html
+++ b/gy_cn.html
@@ -125,6 +125,10 @@
       padding-top: 30px
     }
 
+    #patents {
+      padding-top: 30px
+    }
+
     .styleT {
       font-family: "Times New Roman", Times, serif;
       font-size: 20px;
@@ -209,7 +213,8 @@
   }
    
   window.onload=function(){
-      altRows('alternatecolor');
+      altRows('table_Projects');
+      altRows('table_Patents');
   }
 </script>
 
@@ -240,6 +245,7 @@
               href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#publications">Publications</a></li>
           <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#awards">Awards</a></li>
           <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#projects">Projects</a></li>
+          <li class="scroll-link"><a href="https://towarmth.github.io/UESTC_YuGu/gy_cn.html#patents">Patents</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -326,7 +332,7 @@
         <h2>教育经历</h2>
         <div class="row">
           <ul>
-            <li> 2004.09 - 2009.07 &nbsp;&nbsp; PH.D 中国科学技术大学 | 计算机 | 博士学位 | 研究生(博士)毕业 | 导师:赵保华教授 </li>
+            <li> 2004.09 - 2009.07 &nbsp;&nbsp; PH.D 中国科学技术大学 | 计算机 | 博士学位 | 研究生(博士)毕业 | 导师:赵宝华教授 </li>
             <li> 2000.09 - 2004.07 &nbsp;&nbsp; B.S. 中国科学技术大学 | 少年班 | 学士学位 </li>
           </ul>
         </div>
@@ -340,6 +346,7 @@
       <h2>工作经历</h2>
       <div class="row">
         <ul>
+          <li>2023.01 - 至今 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 计算机科学与工程学院 | 电子科技大学 | 教授 </li>
           <li>2018.07 - 至今 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CCF Senior Member </li>
           <li>2016.04 - 至今 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; IEEE Computer Society Senior
             Member</li>
@@ -435,7 +442,7 @@
                 <font color="#FF0000"><strong>[IEEE Sensors Journal'23]</strong></font>
                 <b>Yu Gu</b>, Huan Yan, Xiang Zhang, Yantong Wang, Jinyang Huang, Yusheng Ji, Fuji Ren,
                 "Attention-based gesture recognition using commodity WiFi devices,"
-                IEEE Sensors Journal, 2023.
+                IEEE Sensors Journal, 2023, doi: 10.1109/JSEN.2023.3261325.
                 (JCR Q1)
               </span>
             </div>
@@ -778,7 +785,7 @@
       </h2>
     <div style="text-align:center;width: 100%; overflow:auto;">
       <!--table border="1" class="altrowstable" id="alternatecolor"-->
-      <table border="1" class="Info_table" id="alternatecolor">
+      <table border="1" class="Info_table" id="table_Projects">
         <tr>
           <th>序号</th>
           <th>项目</th>
@@ -875,7 +882,7 @@
           <td>基于异构标识的安全物联网互联互通机制与协议</td>
           <td>JZ2019ZDYF0009</td>
           <td>国家级C</td>
-          <td>国家自然科学基金委员会，国家自然科学青年科学基金</td>
+          <td>国家自然科学基金委员会，重点研发项目</td>
           <td>计划类（纵向）</td>
           <td>主持子课题</td>
           <td>33w</td>
@@ -978,6 +985,70 @@
     </div>
       <hr>
     </section>
+
+    <section id='patents'>
+      <h2>
+        Patents
+      </h2>
+      <div style="text-align:center;width: 100%; overflow:auto;">
+        <!--table border="1" class="altrowstable" id="alternatecolor"-->
+        <table border="1" class="Info_table" id="table_Patents" width="100%";>
+          <tr>
+            <th>序号</th>
+            <th>专利</th>
+            <th>类型</th>
+            <th>授权编号</th>
+            <th>排名</th>
+            <th>取得时间</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>基于WiFi背景噪声的被动式两人行为识别方法</td>
+            <td>发明</td>
+            <td>ZL201410209856.X</td>
+            <td>1</td>
+            <td>2017年1月4日</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>一种基于安卓系统的同步执行事务方法</td>
+            <td>发明</td>
+            <td>ZL201510934535.0</td>
+            <td>1</td>
+            <td>2018年8月23日</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>一种基于频率分析的自适应CSI信号辅助滤波方法</td>
+            <td>发明</td>
+            <td>ZL201810519228.X</td>
+            <td>1</td>
+            <td>2018年12月19日</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>一种基于WiFi信号的增强呼吸及心率实时监测评估方法系统</td>
+            <td>发明</td>
+            <td>ZL201910601712.1</td>
+            <td>1</td>
+            <td>2019年9月12日</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>一种基于WiFi信号的微形变实时监测评估的方法</td>
+            <td>发明</td>
+            <td>ZL201810519221.8</td>
+            <td>1</td>
+            <td>2021年4月13日</td>
+          </tr>
+        </table>
+      </div>
+      <hr>
+    </section>
+
+
+
+
     </div> <!-- /.site-footer -->
 
 
